<resources>
    <string name="app_name">Intent Testing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Testing Android Intents</string>
    <string name="nav_header_subtitle">ps222vt@student.lnu.se</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="test_text">Test Text</string>
    <string name="home_fragment_button_text">Submit Intent</string>
    <string name="to">To:</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="subject_edit_box">Enter email subject</string>
    <string name="message_edit_box">Type your message here…</string>
    <string name="send_button_message">Send Email Intent</string>
</resources>